Wrote out HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<p>Michael Young</p>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>Gunther Bailey - The Irredeemed Paladin</title>
+   </head>
+
+   <body>
+       <header>
+           <h1>Gunther Bailey</h1>
+           <h3>The Irredeemed Paladin</h3>
+       </header>
+       <main>
+           <img src="https://external-preview.redd.it/droGneIYj7JrdLF9lbKkIrRNKSWxcYrvSHDg4dOquZQ.jpg?auto=webp&s=7df40283a9e6908d6033c17c57c667e9f0a65c58" width='50%'>
+       </main>
+       <article>
+           <Section>
+               <h2>Introduction</h2>
+               <p>Gunther Bailey is deep, nuanced character with an complex narrative arc involving dramatic personal conflict, 
+                betrayal, deception, and eventual redemption. He utilizes a blend of melee combat and supplemental magic to 
+                suppress foes and bolster allies. While he is not the most intelligent character, he makes up for by being very
+                charismatic and quite intimidating when necessary.</p>
+           </Section>
+           <section>
+               <h2>Backstory</h2>
+               <p>Gunther was born to a human mother in a small village in Faeru&#770n. His father was of celestial descent and 
+                was not present for his childhood, although he had heard many stories from his mother of his nobility. This inner 
+                connection to his divine bloodline drew him to study theology at the nearby Church of the Trinity. It was here that 
+                he discovered that while he lacked scholastic abilities, he excelled at physical and social interactions. because 
+                of this, he was conscripted into the Everwatch and trained as a paladin of Helm. One of the duties of the Everwatch
+                Knights was mercenary work as fundraising for the Church. As he was searching for employers, he was approached by 
+                a Wood Elf named Sicarius. A mercenary and scout by trade, Sicarius needed assistance with a particularly difficult 
+                assignment. He hired Gunther as a lookout while he performed surveillance on a group of smugglers, but when he was 
+                discovered, he had to make a quick exit. As Sicarius ran past while being pursued by three of the smugglers, Gunther 
+                stood his ground and not only held back the smugglers, but subdued them and helped Sicarius escape. After that, 
+                Sicarius permanently hired Gunther as a bodyguard. They eventually found regular work in the Underdark, where they 
+                continue to do business today. 
+               </p>
+           </section>
+           <section>
+               <h2>Story Arc</h2>
+               <p>Gunther has several defining characteristics in his build. He is a Protector Aasimar, a Paladin of Redemption, and is 
+                generally Lawful Good. However, the Underdark has a way of changing a person. Over the course of the campaign, due to 
+                madness, fatigue, and the influence of the infernal, Gunther will slowly begin to shift from a champion of goodness, to 
+                a jaded, cynical knight of dread. At his lowest point, his Aasimar subrace will shift to a Fallen, and he will break 
+                his sworn paladin oath as he learns not all people deserve redemption. The evil of the Underdark will influence his 
+                thinking, but one thing will not change: his loyalty to those he is sworn to protect.
+               </p>
+           </section>
+           <section>
+               <h2>Build</h2>
+               <p>The initial build is pretty standard for a paladin. The main stats are going to Charisma and Constitution, as Gunther 
+                plays pretty heavily as a front line protector and tank. Strength is usually favored over Dexterity in order to meet 
+                heavy armor requirements and since maxing out attack damage is a better threat strategy than light finesse weapons. 
+                Intelligence and Wisdom can both be used as dump stats, though Wisdom can be helpful for saving throws.
+               </p>
+               <p>As you level, prioritize Charisma first as spells will be important for control and smites. For additional flexibility, 
+                a single level of Warlock is helpful to acquire cantrips, and it is easily worked into the story arc. (Don't dip until at 
+                least level 5, so you can get Extra Attack as soon as possible.) This is also a good time to begin preparing to shift from 
+                Protector to Fallen Aasimar, and from Redemption to Oathbreaker Paladin.
+               </p>
+           </section>
+           <section>
+               <h2>Playstyle</h2>
+               <p>At the beginning, Gunther is a very light-hearted and good-natured character. He is fiercely loyal to the party members, 
+                but it is not unlikely for him to favor some over others. He acts with his heart and not his head, so can occasionally be 
+                reckless and headstrong, and is very naive when it comes to the motivations of others. As the campaign progresses, and 
+                the stress of keeping the party safe gets overwhelming, Gunther's personality will shift. He will become less light-hearted, 
+                and more brooding. He will become less naive, and more suspicious. Most unnerving though, especially to himself, is he will 
+                fight less to defend, and more from a sense of excitement. He will begin to relish striking down that which opposes him, and 
+                not just neutralizing threats to his friends, but destroying them entirely. No matter how dark he gets though, his devotion 
+                to the party is never compromised.
+               </p>
+           </section>
+       </article>
+       <footer>
+           <p>Designed by Michael Young</p>
+       </footer>
+   </body>
+</html>
