Added Nav and stylesheet link

--- a/index.html
+++ b/index.html
@@ -3,25 +3,40 @@
 <html>
    <head>
       <title>Gunther Bailey - The Irredeemed Paladin</title>
+      <link rel="stylesheet" href="styles.css">
    </head>
 
    <body>
-       <header>
-           <h1>Gunther Bailey</h1>
-           <h3>The Irredeemed Paladin</h3>
-       </header>
-       <main>
+       <div id="content">
+           <div>
+               <nav>
+                   <ul>
+                       <li><a href="#top">Home</a></li>
+                       <li><a href="#Introduction">Introduction</a></li>
+                       <li><a href="#Backstory">Backstory</a></li>
+                       <li><a href="#Story Arc">Story Arc</a></li>
+                       <li><a href="#Build">Build</a></li>
+                       <li><a href="#Playstyle">Playstyle</a></li>
+                   </ul>
+               </nav>
+           </div>
+
+        <header id="top">
+            <h1>Gunther Bailey</h1>
+            <h3>The Irredeemed Paladin</h3>
+        </header>
+        <main>
            <img src="https://external-preview.redd.it/droGneIYj7JrdLF9lbKkIrRNKSWxcYrvSHDg4dOquZQ.jpg?auto=webp&s=7df40283a9e6908d6033c17c57c667e9f0a65c58" width='50%'>
-       </main>
-       <article>
-           <Section>
+        </main>
+        <article>
+           <Section id="Introduction">
                <h2>Introduction</h2>
                <p>Gunther Bailey is deep, nuanced character with an complex narrative arc involving dramatic personal conflict, 
                 betrayal, deception, and eventual redemption. He utilizes a blend of melee combat and supplemental magic to 
                 suppress foes and bolster allies. While he is not the most intelligent character, he makes up for by being very
                 charismatic and quite intimidating when necessary.</p>
            </Section>
-           <section>
+           <section id="Backstory">
                <h2>Backstory</h2>
                <p>Gunther was born to a human mother in a small village in Faeru&#770n. His father was of celestial descent and 
                 was not present for his childhood, although he had heard many stories from his mother of his nobility. This inner 
@@ -37,7 +52,7 @@
                 continue to do business today. 
                </p>
            </section>
-           <section>
+           <section id="Story Arc">
                <h2>Story Arc</h2>
                <p>Gunther has several defining characteristics in his build. He is a Protector Aasimar, a Paladin of Redemption, and is 
                 generally Lawful Good. However, the Underdark has a way of changing a person. Over the course of the campaign, due to 
@@ -47,7 +62,7 @@
                 thinking, but one thing will not change: his loyalty to those he is sworn to protect.
                </p>
            </section>
-           <section>
+           <section id="Build">
                <h2>Build</h2>
                <p>The initial build is pretty standard for a paladin. The main stats are going to Charisma and Constitution, as Gunther 
                 plays pretty heavily as a front line protector and tank. Strength is usually favored over Dexterity in order to meet 
@@ -60,7 +75,7 @@
                 Protector to Fallen Aasimar, and from Redemption to Oathbreaker Paladin.
                </p>
            </section>
-           <section>
+           <section id="Playstyle">
                <h2>Playstyle</h2>
                <p>At the beginning, Gunther is a very light-hearted and good-natured character. He is fiercely loyal to the party members, 
                 but it is not unlikely for him to favor some over others. He acts with his heart and not his head, so can occasionally be 
@@ -72,9 +87,10 @@
                 to the party is never compromised.
                </p>
            </section>
-       </article>
-       <footer>
+         </article>
+         <footer>
            <p>Designed by Michael Young</p>
-       </footer>
+         </footer>
+    </div>>
    </body>
 </html>
